[package]
name = "bevy_statemachine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
bevy = "0.5" # { path = "../../bevy" }
bevy_statemachine_macros =  { git = "https://github.com/robtfm/bevy_statemachine/bevy_statemachine_macros" }